--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.25.0",
     "axios-socks5-agent": "^1.0.5",
     "cheerio": "^1.0.0-rc.10",
+    "debug": "^4.3.3",
     "delay": "^5.0.0",
     "https": "^1.0.0"
   }
